Feat: Lint TeX documents with ChkTeX

--- a/tex/latex/lb_base.sty
+++ b/tex/latex/lb_base.sty
@@ -71,6 +71,7 @@
 }
 
 % Todo notes, annotations, etc.
+% Thanks JM
 \RequirePackage[colorinlistoftodos,prependcaption,textsize=scriptsize]{todonotes}
 
 \newcommandx{\note}[2][1=]{
