Fix: todonotes in TeX

--- a/tex/latex/lb_base.sty
+++ b/tex/latex/lb_base.sty
@@ -9,7 +9,9 @@
 \RequirePackage{commath}
 \RequirePackage{enumitem}
 
-\RequirePackage{xparse}
+\RequirePackage{xparse, xargs}
+
+\RequirePackage{color, xcolor}
 
 %% OPTIONS %%
 
