--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -11,6 +11,8 @@
 % For more powerful command argument parsing
 \RequirePackage{xparse, xargs}
 \RequirePackage{color, xcolor}
+% For more \mathbb support
+\RequirePackage{bbm}
 
 %% OPTIONS %%
 
@@ -62,13 +64,17 @@
 \newcommand{\Z}{\mathbb{Z}}		% Integers
 \newcommand{\N}{\mathbb{N}}		% Natural numbers
 \newcommand{\Q}{\mathbb{Q}}		% Rational numbers
-\newcommand{\C}{\mathbb{C}}		% Complex numbers
+% TODO: RMarkdown on Windows dislikes this
+%\newcommand{\C}{\mathbb{C}}		% Complex numbers
 
 % Set with a condition
 \newcommand{\setc}[2]{\left\{#1\,\middle|\,#2\right\}}
 
 % Bracketed fractions
 \newcommand{\bfrac}[2]{\left(\frac{#1}{#2}\right)}
+
+% Bracketed super script.
+\newcommand{\bs}{}
 
 % Smaller dot operator for dot product, etc.
 \makeatletter
@@ -84,7 +90,7 @@
 % Vector integrals
 % TODO as required
 
-% Material derivative, in a fluid dynamics context 
+% Material derivative, in a fluid dynamics context
 \newcommand{\dmat}[2]{\frac{\text{D}#1}{\text{D}#2}}
 
 % A sequence of the form a_1,...,a_n, where a is passed as an argument. The second and third arguments are optional and specify the two subscript values to include.
@@ -149,7 +155,7 @@
 
 % Modifications for RMarkdown
 % \if@rmarkdown
-% Including code blocks in an enumerate environment causes knitr to fail, 
+% Including code blocks in an enumerate environment causes knitr to fail,
 % so instead we delimit the environment with these new commands.
 % See https://tex.stackexchange.com/a/244996
 % TODO (formatting): latexindent is confused by the begin and ends here.
@@ -159,4 +165,3 @@
 		\newcommand{\ealph}{\end{alpharate}}
 
 % \fi
-
