--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -28,6 +28,8 @@
 % Cumulative distribution function of the standard normal distribution
 \newcommand{\qnorm}[1]{\Phi\left(#1\right)}
 
+% Choose notation more consistent with other commands
+\newcommand{\nCr}[2]{{1\choose #2}}
 
 % Distributions
 \newcommand{\Dist}[2]{#1\left(#2\right)}
