Minor updates in preparation for MacOS install

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -87,7 +87,7 @@
 
 % Vector calculus operators
 \newcommand{\vder}{\nabla}					% Gradient
-\newcommand{\vdiv}{\vder \dotp}			% Divergence
+\newcommand{\vdiv}{\vder \cdot}			% Divergence
 \newcommand{\curl}{\vder \times}    % Curl
 
 % Vector integrals
