--- a/tex/latex/lb_notes.sty
+++ b/tex/latex/lb_notes.sty
@@ -13,6 +13,13 @@
 \mdtheorem{lemma}{Lemma}
 \mdtheorem{result}{Result}
 
+% Proof environment, ended with box
+\newenvironment{proof}{%
+	\noindent{\bfseries Proof.}\hspace{0.5em}
+}{%
+	\ \null  \hfill $\square$ \par
+}
+
 \DeclareOption*{\OptionNotUsed}
 \ProcessOptions\relax
 
