--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -90,6 +90,10 @@
 % Vector integrals
 % TODO as required
 
+% Differential form of an SDE
+% TODO: Include an optional parameter for the noise, defaulting to W_t
+\newcommand{\sde}[3]{\dif #1 = #2\dif t + #3 \dif W_t}
+
 % Material derivative, in a fluid dynamics context
 \newcommand{\dmat}[2]{\frac{\text{D}#1}{\text{D}#2}}
 
