--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -73,6 +73,10 @@
 % Bracketed super script.
 \newcommand{\bs}{}
 
+% Floor and ceiling
+\newcommand{\floor}[1]{\left\lfloor#1\right\rfloor}
+\newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
+
 % Smaller dot operator for dot product, etc.
 \makeatletter
 \newcommand*{\dotp}{\mathpalette\dotp@{.5}}
