--- a/tex/latex/lb_style.sty
+++ b/tex/latex/lb_style.sty
@@ -4,6 +4,9 @@
 
 \ProvidesPackage{lb_style}[16/03/2021]
 
+% Styling of figure captions
+\usepackage[labelfont=bf]{caption}
+
 %% OPTIONS %%
 
 % Option for sans serif font
@@ -15,3 +18,5 @@
 \setlength{\parskip}{\baselineskip}
 \setlength{\parindent}{0pt}
 
+% Number equations by section
+\numberwithin{equation}{section}
