fix[nvim]: tree-sitter parser install issues on Windows

--- a/tex/latex/lb_notes.sty
+++ b/tex/latex/lb_notes.sty
@@ -1,6 +1,6 @@
 % A consistent style for typed lecture-style notes.
 % Includes variations on some of the environments defined in lb_theory, e.g. example, proof.
-% 
+%
 
 \ProvidesPackage{lb_notes}[30/03/2021]
 
@@ -12,6 +12,7 @@
 \mdtheorem{example}{Example}
 \mdtheorem{lemma}{Lemma}
 \mdtheorem{result}{Result}
+\mdtheorem{hypo}{Hypothesis}
 
 % Proof environment, ended with box
 \newenvironment{proof}{%
@@ -28,4 +29,3 @@
 
 % No indents on new paragraphs, these are the work of the devil
 \setlength\parindent{0pt}
-
