Minor tweaks to TeX setup

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -155,6 +155,8 @@
 	}
 }
 
+% Placeholder for a citation
+\newcommand{\citehere}{{\color{blue}{[citation needed]}} }
 
 % Neat trick to access environment variables
 % From https://tex.stackexchange.com/a/62032
