chore: run pre-commit on all files

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -94,6 +94,8 @@
 \newcommand{\vdiv}{\vder \cdot}			% Divergence
 \newcommand{\curl}{\vder \times}    % Curl
 
+\newcommand{\hessian}{\nabla\nabla}
+
 % Vector integrals
 % TODO as required
 
