--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -13,7 +13,7 @@
 
 % Statistical operators
 \newcommand{\var}[1]{\operatorname{var} \left(#1\right)}
-\newcommand{\avg}[1]{\mathbb{E}\left[#1\right]}
+\newcommand{\avg}[2][]{\mathbb{E}_{#1}\left[#2\right]}
 \newcommand{\cov}[1]{\operatorname{cov} \left(#1\right)}
 \newcommand{\sd}[1]{\operatorname{sd} \left(#1\right)}
 \newcommand{\cor}[1]{\operatorname{cor} \left(#1\right)}
