Remove MAI from masters tmuxinator config Plus some tex-related changes

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -113,7 +113,7 @@
 \NewDocumentCommand{\seq}{O{1} O{n} m}{#3_{#1},\hdots,#3_{#2}}
 
 % Provide reasoning in a \text env alongside a line of maths
-\newcommand{\rea}[1]{\qquad \qquad \left(\text{#1}\right)}
+\newcommand{\reason}[1]{\qquad \qquad \left(\text{#1}\right)}
 
 % argmax and argmin
 \DeclareMathOperator{\argmax}{argmax}
