[tmux]: modify masters template

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -13,6 +13,9 @@
 \RequirePackage[usenames,dvipsnames]{color, xcolor}
 % For more \mathbb support
 \RequirePackage{bbm}
+% Hyperlinks are cool
+\RequirePackage{url}
+\RequirePackage{hyperref}
 
 %% OPTIONS %%
 
