[alacritty]: MacOS tweaks
Plus various other tweaks that don't need dedicated commits.

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -16,6 +16,8 @@
 % Hyperlinks are cool
 \RequirePackage{url}
 \RequirePackage{hyperref}
+% Units
+\RequirePackage{siunitx}
 
 %% OPTIONS %%
 
@@ -162,6 +164,11 @@
 
 % Placeholder for a citation
 \newcommand{\citehere}{{\color{blue}{[citation needed]}} }
+
+% Some commonly-used names with accents
+\newcommand{\ito}{It\^{o}}
+\newcommand{\gronwall}{Gr\"{o}nwall}
+\newcommand{\holder}{H\"{o}lder}
 
 % Neat trick to access environment variables
 % From https://tex.stackexchange.com/a/62032
