--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -12,7 +12,7 @@
 \newcommand{\cond}[2]{\left.\,#1\,\middle|\,#2\right.}
 
 % Statistical operators
-\newcommand{\var}[1]{\mathbb{V} \left(#1\right)}
+\newcommand{\var}[1]{\mathbb{V}\left[#1\right]}
 \newcommand{\avg}[1]{\mathbb{E}\left[#1\right]}
 \newcommand{\cov}[1]{\operatorname{cov} \left(#1\right)}
 \newcommand{\sd}[1]{\operatorname{sd} \left(#1\right)}
