rstudio config tweaks plus some tex stuff

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -10,7 +10,7 @@
 \RequirePackage{enumitem}
 % For more powerful command argument parsing
 \RequirePackage{xparse, xargs}
-\RequirePackage[usenames,dvipsnames]{color, xcolor}
+% \RequirePackage[usenames,dvipsnames]{color, xcolor}
 % For more \mathbb support
 \RequirePackage{bbm}
 % Hyperlinks are cool
@@ -169,6 +169,7 @@
 \newcommand{\ito}{It\^{o}}
 \newcommand{\gronwall}{Gr\"{o}nwall}
 \newcommand{\holder}{H\"{o}lder}
+\newcommand{\burkholder}{Burkh\"{o}lder}
 
 % Neat trick to access environment variables
 % From https://tex.stackexchange.com/a/62032
