--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -50,8 +50,9 @@
 \newcommand{\Cauchy}[1]{\Dist{\mathrm{Cauchy}}{#1}}
 \newcommand{\Trinom}[1]{\Dist{\mathrm{Tri}}{#1}}
 \newcommand{\Dir}[1]{\Dist{\mathrm{Dirichlet}}{#1}}
-\newcommand{\LogNorm}[1]{\Dist{\text{log-}\mathcal{N}}{#1}}
-\newcommand{\InvChiSq}[1]{\Dist{\text{inv-}\chi^2}{#1}}
+\newcommand{\LogNorm}[1]{\Dist{\mathrm{log-}\mathcal{N}}{#1}}
+\newcommand{\InvChiSq}[1]{\Dist{\mathrm{inv-}\chi^2}{#1}}
+\newcommand{\InvGam}[1]{\Dist{\mathrm{Inv-Gamma}}{#1}}
 
 % With \sim
 \newcommand{\isBern}[1]{\sim\Bern{#1}}
@@ -70,6 +71,7 @@
 \newcommand{\isDir}[1]{\sim\Dir{#1}}
 \newcommand{\isLogNorm}[1]{\sim\LogNorm{#1}}
 \newcommand{\isInvChiSq}[1]{\sim\InvChiSq{#1}}
+\newcommand{\isInvGam}[1]{\sim\InvGam{#1}}
 
 % Weirder notation using subscripts
 \newcommand{\ChiSq}[1]{\chi^2_{#1}}
