--- a/tex/latex/lb_notes.sty
+++ b/tex/latex/lb_notes.sty
@@ -13,6 +13,7 @@
 \newtheorem{lemma}{Lemma}[section]
 \newtheorem{result}{Result}[section]
 \newtheorem{hypo}{Hypothesis}[section]
+\newtheorem{remark}{Remark}[section]
 
 % Proof environment, ended with box
 \newenvironment{proof}{%
