--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -12,8 +12,8 @@
 \newcommand{\cond}[2]{\left.\,#1\,\middle|\,#2\right.}
 
 % Statistical operators
-\newcommand{\var}[1]{\mathbb{V}\left[#1\right]}
-\newcommand{\avg}[1]{\mathbb{E}\left[#1\right]}
+\newcommand{\var}[1]{\mathbb{V}\!\left[#1\right]}
+\newcommand{\avg}[1]{\mathbb{E}\!\left[#1\right]}
 \newcommand{\cov}[1]{\operatorname{cov} \left(#1\right)}
 \newcommand{\sd}[1]{\operatorname{sd} \left(#1\right)}
 \newcommand{\cor}[1]{\operatorname{cor} \left(#1\right)}
@@ -30,6 +30,8 @@
 
 % Choose notation more consistent with other commands
 \newcommand{\nCr}[2]{{1\choose #2}}
+
+\newcommand{\alsu}{\,\text{a.s.}}
 
 % Distributions
 \newcommand{\Dist}[2]{#1\left(#2\right)}
