[nvim/tex]: various small changes

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -97,6 +97,12 @@
 % Hyperbolic functions 
 \DeclareMathOperator{\sech}{sech}
 \DeclareMathOperator{\csch}{csch}
+\DeclareMathOperator{\arcsinh}{arcsinh}
+\DeclareMathOperator{\arccosh}{arccosh}
+\DeclareMathOperator{\arctanh}{arctanh}
+\DeclareMathOperator{\arcsech}{arcsech}
+\DeclareMathOperator{\arccsch}{arccsch}
+\DeclareMathOperator{\arccoth}{arccoth}
 
 % Vector calculus operators
 \newcommand{\vder}{\nabla}					% Gradient
@@ -134,6 +140,9 @@
 % Real and imaginary components
 \renewcommand{\Re}[1]{\mathrm{Re}\left(#1\right)}
 \renewcommand{\Im}[1]{\mathrm{Im}\left(#1\right)}
+
+% Big-O notation 
+\newcommand{\bigO}[1]{\mathcal{O}\left(#1\right)}
 
 % Enumerate environment with alphabetic labels
 \newenvironment{alpharate}{
