--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -14,7 +14,7 @@
 
 % Statistical operators
 \newcommand{\var}[1]{\mathds{V}\!\left[#1\right]}
-\newcommand{\avg}[1]{\mathds{E}\!\left[#1\right}
+\newcommand{\avg}[1]{\mathds{E}\!\left[#1\right]}
 \newcommand{\cov}[1]{\operatorname{cov} \left(#1\right)}
 \newcommand{\sd}[1]{\operatorname{sd} \left(#1\right)}
 \newcommand{\cor}[1]{\operatorname{cor} \left(#1\right)}
