[tex]: symlinks to style files in texmf

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -194,6 +194,9 @@
 	}
 }
 
+% Lazy todo
+\newcommand{\tds}{\td{something}}
+
 % Placeholder for a citation
 \newcommand{\citehere}{{\color{blue}{[citation needed]}} }
 
