[tex]: add warning to log for any \citehere call

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -198,7 +198,7 @@
 \newcommand{\tds}{\td{something}}
 
 % Placeholder for a citation
-\newcommand{\citehere}{{\color{blue}{[citation needed]}} }
+\newcommand{\citehere}{{\color{blue}{[citation needed]}}\wlog{Warning: Citation needed on input line \the\inputlineno} }
 
 % Some commonly-used names with accents
 \newcommand{\ito}{It\^{o}}
