--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -14,7 +14,7 @@
 \RequirePackage{bbm}
 % Hyperlinks are cool
 \RequirePackage{url}
-\RequirePackage[hidelinks]{hyperref}
+
 % Units
 \RequirePackage{siunitx}
 
@@ -53,6 +53,25 @@
 \norefnames
 \nocitenames
 
+% Bibliography settings - use Natbib
+\RequirePackage[numbers,square]{natbib}
+
+% Hyperlinks and Cleveref
+\RequirePackage{hyperref}
+\RequirePackage[capitalise,nameinlink,noabbrev]{cleveref}
+% Tell refcheck about cleveref. From: 
+% https://tex.stackexchange.com/questions/87610/making-refcheck-work-with-cleveref
+\makeatletter
+\newcommand{\refcheckize}[1]{%
+  \expandafter\let\csname @@\string#1\endcsname#1%
+  \expandafter\DeclareRobustCommand\csname relax\string#1\endcsname[1]{%
+    \csname @@\string#1\endcsname{##1}\wrtusdrf{##1}}%
+  \expandafter\let\expandafter#1\csname relax\string#1\endcsname
+}
+\makeatother
+
+\refcheckize{\cref}
+\refcheckize{\Cref}
 
 % Allow numbering of individuals lines in an align env
 \newcommand{\numberthis}{\addtocounter{equation}{1}\tag{\theequation}}
@@ -130,6 +149,9 @@
 
 % Transpose operator with \T
 \newcommand{\T}{^{\intercal}}
+
+% Trace operator
+\newcommand{\tr}[1]{\mathrm{tr}\left[#1\right]}
 
 % Real and imaginary components
 \renewcommand{\Re}[1]{\mathrm{Re}\left(#1\right)}
@@ -314,7 +336,7 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{defn}{Definition}[section]
 \newtheorem{corollary}{Corollary}[section]
-\newtheorem{example}{Example}[section]
+% \newtheorem{example}{Example}[section]
 \newtheorem{lemma}{Lemma}[section]
 \newtheorem{result}{Result}[section]
 \newtheorem{hypo}{Hypothesis}[section]
