[tex]: \vecop operator

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -18,6 +18,9 @@
 % Units
 \RequirePackage{siunitx}
 
+% Subfigures
+\RequirePackage{caption}
+\RequirePackage{subcaption}
 
 %% OPTIONS %%
 %
@@ -348,3 +351,6 @@
 }{%
 	\ \null  \hfill $\square$ \par
 }
+
+% Vec operator 
+\DeclareMathOperator{\vecop}{vec}
