[tex]: minor tweaks to style

--- a/tex/latex/lb.sty
+++ b/tex/latex/lb.sty
@@ -22,6 +22,9 @@
 \RequirePackage{caption}
 \RequirePackage{subcaption}
 
+% More integration signs
+\RequirePackage{esint}
+
 %% OPTIONS %%
 %
 % notodo: Pass the "disable" option to the todonotes package. This will prevent any annotations
@@ -352,5 +355,5 @@
 	\ \null  \hfill $\square$ \par
 }
 
-% Vec operator 
+% Vec operator
 \DeclareMathOperator{\vecop}{vec}
