[tex]: bibliography options and hyperref colours

--- a/tex/latex/lb_style.sty
+++ b/tex/latex/lb_style.sty
@@ -35,7 +35,7 @@
 \numberwithin{equation}{section}
 
 % Hyperrefs
-\hypersetup{colorlinks,linkcolor=blue,citecolor=red,urlcolor=magenta,filecolor=magenta,breaklinks,dvips,bookmarks,bookmarksopen}
+\hypersetup{colorlinks,linkcolor=red,citecolor=cyan,urlcolor=magenta,filecolor=magenta,breaklinks,dvips,bookmarks,bookmarksopen}
 
 % Section stylisation
 \RequirePackage{titlesec}
