[nvim]: remove texlab proving to be redundant with vimtex

--- a/tex/latex/lb_style.sty
+++ b/tex/latex/lb_style.sty
@@ -39,9 +39,9 @@
 
 % Section stylisation
 \RequirePackage{titlesec}
-\titleformat{\section}[runin]{\color{black}\normalfont\bfseries}{\thesection.}{0.5em}{}[.\vspace{0.5em}]
-\titleformat{\subsection}[runin]{\color{black}\normalfont\bfseries}{\thesubsection.}{0.5em}{}[.\vspace{0.5em}]
-\titleformat{\subsubsection}[runin]{\color{black}\normalfont\bfseries}{\thesubsection.}{0.5em}{}[.\vspace{0.5em}]
+\titleformat{\section}[runin]{\color{black}\normalfont\bfseries}{\thesection.}{0.5em}{}[.]
+\titleformat{\subsection}[runin]{\color{black}\normalfont\bfseries}{\thesubsection.}{0.5em}{}[.]
+\titleformat{\subsubsection}[runin]{\color{black}\normalfont\bfseries}{\thesubsection.}{0.5em}{}[.]
 
 
 % Class specific adjustments
