--- a/tex/latex/lb_style.sty
+++ b/tex/latex/lb_style.sty
@@ -12,7 +12,7 @@
 % Font
 \RequirePackage{lmodern}
 \RequirePackage[T1]{fontenc}
-\renewcommand{\familydefault}{\sfdefault}
+% \renewcommand{\familydefault}{\sfdefault}
 
 %% OPTIONS %%
 
